<resources>
    <string name="app_name">DeliveryOptimise</string>
    <string name="back">Back</string>
    <string name="google_maps_key">AIzaSyA8eJEaPxmkqOSRBC-pNoCQzemiJfIjo5U</string>
    <string name="title_act_locations">LOCATIONS</string>
    <string name="title_act_map">MAP</string>

    <string name="btnMessage_depart">Depart</string>
    <string name="btnMessage_arrive">Arrive</string>
    <string name="btnMessage_cancel">Cancel</string>
    <string name="btnMessage_sure">Sure</string>
    <string name="btnMessage_logout">Logout</string>

    <string name="btnMessage_depart_clicked">You already clicked the "Depart" button, do you want to click again?</string>
    <string name="btnMessage_arrive_clicked">You already clicked the "Arrive" button, do you want to click again?</string>

    <!-- Location -->
    <string name="name_origin">Origin</string>
    <string name="name_destination">Destination</string>
    <string name="name_waypoint">WayPoint</string>

    <!-- Login -->
    <string name="hint_username">Username.</string>
    <string name="hint_password">Password.</string>
    <string name="btn_login">Login</string>
    <string name="btn_to_login">Register</string>
    <string name="title_login">LOGIN</string>
    <string name="toast_empty_username">The username is empty. Please enter the username.</string>
    <string name="toast_empty_password">The password is empty. Please enter the password.</string>

    <!-- Register -->
    <string name="hint_confirm_pwd">Confirm the password.</string>
    <string name="hint_phone_number">Phone number.</string>
    <string name="hint_email">Email address.</string>
    <string name="hint_city">City.</string>
    <string name="hint_suburb">Suburb.</string>
    <string name="hint_street">Street.</string>
    <string name="btn_register">Register</string>
    <string name="title_register">REGISTER</string>
    <string name="toast_confirm_pwd">Please confirm the password.</string>
    <string name="toast_pwd_different">The passwords are different, please enter the password again.</string>
    <string name="toast_email">The email is empty. Please enter the email.</string>
    <string name="toast_phone">The phone number is empty. Please enter the phone number.</string>
    <string name="toast_feedback">The feedback is empty. Please enter the feedback.</string>

    <!-- User Info -->
    <string name="user_info_title_phone">Phone: </string>
    <string name="user_info_title_email">Email: </string>
    <string name="user_role_staff">Staff</string>
    <string name="btn_edit">Edit</string>
    <string name="title_edit">EDIT</string>
    <string name="title_info">INFORMATION</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
