<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/view_title_bar"
        layout="@layout/view_title_bar" />

    <Button
        android:id="@+id/btn_register"
        style="@style/general_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_register" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_register"
        android:layout_below="@id/view_title_bar"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username"
                style="@style/et_login"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_username" />

            <EditText
                android:id="@+id/et_password"
                style="@style/et_login"
                android:layout_below="@id/et_username"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_confirm_pwd"
                style="@style/et_login"
                android:layout_below="@id/et_password"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_confirm_pwd"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/et_login"
                android:layout_below="@id/et_confirm_pwd"
                android:layout_marginTop="10dp"
                android:hint="Phone Number." />

            <EditText
                android:id="@+id/et_email"
                style="@style/et_login"
                android:layout_below="@id/et_phone"
                android:layout_marginTop="10dp"
                android:hint="Email." />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>